samples/_failures_safe/1761333432_0a4bc9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bd1bfddd.c: In function ‘main’:
./samples/SAFE/__tmp_bd1bfddd.c:137:5: error: expected expression at end of input
  137 |     if (scanf("%zu %zu", &rows2, &cols2) != 2 || rows2 == 0 || cols2 ==
      |     ^~
./samples/SAFE/__tmp_bd1bfddd.c:137:5: error: expected declaration or statement at end of input
